--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -28,6 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="?actionBarSize"
                 android:scaleType="fitXY"
+                android:padding="8dp"
                 android:src="@drawable/logo"
                 android:contentDescription="@string/app_name" />
 
